# tensorflow-yolov4-tflite

./: .pre-commit-config.yaml  README.md  detect.py  pyproject.toml  save_model.py
core/: config.py
