[tool.poetry]
name = "tf-yolo"
version = "0.1.0"
description = ""
authors = ["Magnus <magnus@jahnen.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.2.0"
keras = "^2.4.3"
tensorflow = "^2.3.0"
pydantic = "^1.6.1"
gunicorn = "^20.0.4"
opencv-python = "^4.4.0"
easydict = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
